--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 <footer>
 	© 2026 Penelope the Platypus • Strategically Free <br>
 	<p>
-	    A % of creators reward will be use for token buy backs, donation for zoo's by peoples choice.<br>
+	    A % of <a href="https://x.com/cthulhujinn" target="_blank" class="no-underline-link">creators</a>
+		reward will be use for token buy backs, donation for zoo's by peoples choice.<br>
 	    PNLope a community-driven meme project. Nothing here is financial advice. Always DYOR.
 	</p>	
 
@@ -153,3 +154,4 @@
 
 </body>
 </html>
+
